--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,4 @@
+<img id="mainLogo" src="../../../assets/img/logo_live.png" alt="MSN Messenger Logo">
 <a [routerLink]="['/home']">Home</a> |
 <a [routerLink]="['/login']">Login</a> |
 <a [routerLink]="['/profile']">Profile</a>
