--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,30 @@
-<p>
-  login works!
-</p>
+<div class="login-container">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-3">
+        <div class="avatar-frame-offline margin-top-15 margin-bottom-15">
+          <img src="../../../assets/img/generic_avatar.png" class="avatar-image img-fluid" alt="Generic Avatar">
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="center">
+          <h3 *ngIf="operation === 'logIn'">Login</h3>
+          <h3 *ngIf="operation === 'register'">Register</h3>
+        </div>
+        <p *ngIf="operation === 'register'">Already have an account? <a (click)="operation = 'logIn'">Log In</a></p>
+        <p *ngIf="operation === 'logIn'">Don't have an account? <a (click)="operation = 'register'">Register</a></p>
+        <div class="bordered-container">
+          <input class="form-control margin-top-15" type="email" placeholder="Email">
+          <input class="form-control margin-top-15" type="password" placeholder="Password">
+          <input *ngIf="operation === 'register'" class="form-control margin-top-15" type="text" placeholder="Nick">
+        </div>
+        <div class="center margin-top-15">
+          <a *ngIf="operation === 'logIn'" class="btn btn-primary" href="">Log In</a>
+          <a *ngIf="operation === 'register'" class="btn btn-primary" href="">Sign Up</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
