--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,42 @@
-<p>
-  profile works!
-</p>
+<div class="profile-container">
+  <div class="container padding-top-45">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="avatar-frame-online">
+          <img src="../../../assets/img/generic_avatar.png" class="avatar-image img-fluid" alt="Generic avatar">
+        </div>
+        <hr />
+        <span>Change picture</span><br />
+        <label class="custom-file-upload">
+          <input type="file">
+          Upload avatar
+        </label>
+      </div>
+      <div class="col-md-9">
+        <div>
+          <label fixed>Nick</label>
+          <input type="text" class="form-control">
+        </div>
+        <div>
+          <label fixed>Subnick</label>
+          <input type="text" class="form-control">
+        </div>
+        <div>
+          <label fixed>Email</label>
+          <input type="text" disabled class="form-control">
+        </div>
+        <div>
+          <label fixed>Status</label>
+          <select class="form-control">
+            <option value="online">Online</option>
+            <option value="away">Away</option>
+            <option value="busy">Busy</option>
+            <option value="appear_offline">Desconnected</option>
+          </select>
+        </div>
+        <hr />
+        <a class="btn btn-primary btn-block">Save</a>
+      </div>
+    </div>
+  </div>
+</div>
