--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,6 +15,8 @@
             <span>
               ( Write a personal message )
             </span>
+            <br />
+            <a (click)="logOut()">Logout</a>
           </div>
         </div>
       </div>
@@ -32,7 +34,7 @@
     </div>
 
     <hr />
-    <b>Friends ({{friends.length}} / {{friends.length}})</b>
+    <b *ngIf="friends">Friends ({{friends.length}} / {{friends.length}})</b>
     <div *ngFor="let user of friends | search: query; let i = index" class="display-block margin-bottom-5">
       <span routerLink="/conversation/{{user.uid}}">
         <img src="../../../assets/img/logo_live_online.png" class="icon" alt="Logo live online">
