--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,8 +1,8 @@
 <div id="menuContainer">
-  <div routerLink="/home" class="item branding">
+  <div routerLink="/home" class="item branding pointer">
     <img id="mainLogo" src="../../../assets/img/logo_live.png" alt="MSN Messenger Logo">
   </div>
-  <div routerLink="/profile" class="item">
+  <div routerLink="/profile" class="item pointer">
     Profile
   </div>
 </div>
